--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -2,19 +2,19 @@ name: Cypress Tests
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
   pull_request:
+    branches: [ main ]
 
 jobs:
   cypress-run:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup Node.js
+      - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 18
@@ -22,9 +22,8 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Verify Cypress installation
+        run: npx cypress verify
+
       - name: Run Cypress tests
-        uses: cypress-io/github-action@v6
-        with:
-          start: npm start
-          wait-on: http://localhost:3000
-          wait-on-timeout: 120
+        run: npm run test
