--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "1.0.0",
   "main": "cypress.config.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "cy:open": "cypress open",
+    "test": "cypress run",
     "testRun": "npx cypress run",
     "headTest": "npx cypress run --headed",
-    "chromeTest": "npx run --browser chrome",
+    "chromeTest": "npx cypress run --browser chrome",
     "recordDashboardTest": "npx cypress run --record --key b34fd6f1-db10-4ba7-b364-e925c36c1b35 --spec cypress/e2e/TestFramework.cy.js --browser chrome",
     "recordDashboardSample": "npx cypress run --record --key ",
     "greenKartTest": "npx cypress run --spec \"cypress/integration/examples/GreenKart/*.js\"",
@@ -15,5 +16,8 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "cypress": "^15.5.0"
+  }
 }
