--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -9,6 +9,7 @@ on:
 jobs:
   cypress-run:
     runs-on: ubuntu-latest
+    timeout-minutes: 10
 
     steps:
       - name: Checkout code
@@ -18,6 +19,13 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 18
+          cache: 'npm'
+
+      - name: Cache Cypress binary
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/Cypress
+          key: cypress-cache-${{ runner.os }}-${{ hashFiles('package-lock.json') }}
 
       - name: Install dependencies
         run: npm ci
@@ -25,5 +33,5 @@ jobs:
       - name: Verify Cypress installation
         run: npx cypress verify
 
-      - name: Run Cypress tests
-        run: npm run test
+      - name: Run Cypress tests (debug mode)
+        run: npx cypress run --browser chrome --headless --record false --config video=false
